Login changed and added Signup.

--- a/ink-flow/src/index.css
+++ b/ink-flow/src/index.css
@@ -7,7 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
-  background: linear-gradient(#F54709, #FF8614);
+  background: linear-gradient(#fb4402, #e27814);
 }
 
 code {
